Clean rewrite: single-pass APK patching, fix malformed ZIP issue